cabal-version: 2.2

author: Mitchell Rosen
bug-reports: https://github.com/mitchellwrosen/bigjoe/issues
category: Logging
copyright: Copyright (C) 2022 Mitchell Rosen
description: A logging library.
homepage: https://github.com/mitchellwrosen/bigjoe
license: BSD-3-Clause
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
name: bigjoe
stability: experimental
synopsis: A logging library
tested-with: GHC == 9.0.2, GHC == 9.2.5, GHC == 9.4.3
version: 0.1.0

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/mitchellwrosen/bigjoe.git

library
  build-depends:
    base ^>= 4.15 || ^>= 4.16 || ^>= 4.17,
    bytestring ^>= 0.11.3,
    ki ^>= 1.0.0,
    ptr-poker ^>= 0.1.2,
    stm ^>= 2.5.1,
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    ExistentialQuantification
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    PartialTypeSignatures
    PatternSynonyms
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    TypeApplications
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
  exposed-modules:
    Bigjoe
  hs-source-dirs: src
